Benchmark cleanup and improvements